--- a/Effects.html
+++ b/Effects.html
@@ -34,12 +34,12 @@
 </head>
 <body>
     <div id="background" style="text-align: center;font-size: 40px;">
-        <h1><strong>THE EFFECTS PAGE</strong></h1>
+        <h1><strong>Good Effect</strong></h1>
     </div><div id="gradient" style="text-align: center;font-size: 40px;">
-        <h1><strong>THE EFFECTS PAGE</strong></h1>
+        <h1><strong>Better Effect</strong></h1>
     </div>
     <div id="animations" style="text-align: center;font-size: 40px;">
-        <h1><strong>THE EFFECTS PAGE</strong></h1>
+        <h1><strong>Best Effect</strong></h1>
     </div>
 </body>
 </html>
